[package]
name = "graphql-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
async-trait = "0.1.58"
axum = "0.5.17"
chrono = "0.4.23"
futures = "0.3.25"
futures-core = "0.3.25"
redis = { version = "0.22.1", features = ["tokio-comp"] }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
uuid = { version = "1.2.2", features = ["v4"] }
